--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 25px;
   color: black;
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
 }
 
 .logo {
@@ -56,6 +59,12 @@ body {
 }
 
 .containter {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+}
+
+.weather-panel {
   max-width: 600px;
   margin: 30px auto;
   padding: 20px;
