--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 25px;
   color: black;
+  max-width: 600px;
 }
 
 .logo {
-  width: 7%;
+  width: 10%;
   border-radius: 10%;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -17,8 +18,7 @@ body {
 }
 
 .currentemp {
-  font-weight: 600;
-  font-size: 48px;
+  font-size: 42px;
   text-align: right;
   position: relative;
   bottom: 55px;
@@ -53,18 +53,18 @@ body {
   background: #ab179a;
   border: #ab179a;
   border-radius: 5%;
-}
-
-.containter {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .weather-panel {
   max-width: 600px;
   margin: 30px auto;
   padding: 20px;
-  border: 1px solid #ab179a;
+  border: 1px solid darkgrey;
   border-radius: 5px;
+}
+
+#search-input {
+  width: 75%;
 }
